# Used-Car-Price-Intelligence-Platform

./: .gitignore  .vercelignore  LICENSE  PROJECT_NOTEBOOK.md  README.md  app.py  design-qa.md  pyproject.toml  requirements.txt
config/: acquisition_batches.yml  parser_rules.yml  scale_collection_policy.yml  snapshot_targets.yml  source_registry.yml
data/: README.md
docs/: 00-operating-principles.md  01-data-strategy.md  02-data-architecture.md  03-technology-decisions.md  04-first-90-days-roadmap.md  05-github-repo-plan.md  06-data-acquisition-research-and-plan.md  07-data-quality-and-source-normalization-plan.md  08-source-feature-matrix.md  09-canonical-listing-schema.md  10-parser-specifications.md  11-source-fixture-capture-notes.md  12-blind-spots-and-risk-review.md  13-source-trust-and-priority-review.md  14-local-quality-reporting.md  15-live-source-field-gap-review.md  16-first-live-adapter-contract-and-failure-modes.md  17-bounded-live-capture-command.md  18-first-live-capture-run.md  19-spinny-live-smoke-workflow.md  20-spinny-detail-page-enrichment.md  21-spinny-pagination-policy.md  22-batch-acquisition-and-100k-row-plan.md  23-mahindra-first-choice-source-evaluation.md  24-source-specific-acquisition-boundaries.md  25-spinny-vs-mahindra-first-choice-field-comparison.md  26-true-value-source-evaluation.md  27-three-source-field-comparison.md  28-batch-runner-foundation.md  29-100k-collection-acceleration-plan.md  30-true-value-5city-fast-collection-run.md  31-mahindra-first-choice-5city-collection-run.md  32-collection-ledger.md  38-5k-snapshot-target-plan.md  (+36 more)
(+124 files in other folders)
