[project]
name = "used-car-price-intelligence"
version = "0.1.0"
description = "Data-first used car price intelligence platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
acquisition = [
  "playwright>=1.45",
]
notebook = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.0",
  "scikit-learn>=1.4",
  "seaborn>=0.13",
]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
