[project]
name = "used-car-price-intelligence"
version = "0.1.0"
description = "Data-first used car price intelligence platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "joblib>=1.3,<2",
  "numpy>=1.26,<3",
  "pandas>=2.0,<3",
  "pydantic>=2.7,<3",
  "pyyaml>=6.0",
  "scikit-learn==1.8.0",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.115",
  "pydantic>=2.7",
  "uvicorn[standard]>=0.30",
]
modeling = [
  "joblib>=1.3",
  "numpy>=1.26",
  "pandas>=2.0",
  "scikit-learn==1.8.0",
]
acquisition = [
  "playwright>=1.45",
]
notebook = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.0",
  "scikit-learn==1.8.0",
  "seaborn>=0.13",
]
dev = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
